# ReadySetBoole

./: CMakeLists.txt
docker/: Dockerfile  run.sh
etc/: ToDo
ex00/: Makefile  a.out  adder  adder.c  adder.cpp  adder.h  ex00.c  main.cpp
ex01/: Makefile  main.cpp  multiplier.cpp  mutliplier.c
ex02/: gray_code.c  gray_code.cpp
ex03/: Makefile  eval_formula  eval_formula.cpp  main.cpp  test.sh
ex04/: main.cpp  print_truth_table.cpp
ex05/: Makefile  main.cpp  negation_normal_form  negation_normal_form.cpp  test.sh
ex06/: Makefile  conjunctive_normal_form  conjunctive_normal_form.cpp
exercice_00_Adder/: Makefile
exercice_01_Multiplier/: main.cpp
exercice_02_Gray_code/: gray_code.cpp
exercice_03_Boolean_evaluation/: Makefile  eval_formula.cpp  main.cpp  test.sh
exercice_03_Boolean_evaluation/includes/: eval_formula.hpp
exercice_03_Boolean_evaluation/srcs/: eval_formula.cpp
exercice_03_Boolean_evaluation/test/: test.sh
exercice_04_Truth_table/: Makefile  main.cpp
exercice_04_Truth_table/srcs/: print_truth_table.cpp
exercice_05_NegationNormalForm/: Makefile  test.sh
exercice_05_NegationNormalForm/srcs/: main.cpp
exercice_06_ConjunctiveNormalForm/: main.cpp
exercices/: CMakeLists.txt
exercices/00_Adder/: adder.cpp  adder.h
exercices/01_Multiplier/: multiplier.cpp  multiplier.h
exercices/02_GrayCode/: grayCode.cpp  grayCode.h
exercices/03_BooleanEvaluation/: evalFormula.cpp  evalFormula.h  main.cpp
exercices/04_TruthTable/: printTruthTable.cpp  printTruthTable.h
exercices/05_NegationNormalForm/: negationNormalForm.cpp  negationNormalForm.h
exercices/06_ConjunctiveNormalForm/: conjunctiveNormalForm.cpp  conjunctiveNormalForm.h
exercices/07_SAT/: sat.cpp  sat.h
exercices/08_Powerset/: powerset.cpp  powerset.h
exercices/09_EvalSet/: evalSet.cpp  evalSet.h
exercices/exercice_06_ConjunctiveNormalForm/: conjunctive_normal_form.cpp
exercices/inc/: ConjunctiveNormalForm.hpp  NNF.hpp
exercices/tests/: CMakeLists.txt  test_00_Adder.cpp  test_01_Multiplier.cpp  test_02_GrayCode.cpp  test_03_BooleanEvaluation.cpp  test_04_TruthTable.cpp  test_05_NegationNormalForm.cpp  test_06_ConjunctiveNormalForm.cpp  test_07_SAT.cpp  test_08_Powerset.cpp  test_09_SetEvaluation.cpp  utils.h
inc/: Btree.hpp  CNF.hpp  Node.hpp  readysetboole.h  utils.cpp
lib/: CMakeLists.txt
lib/include/lib/: AMANode.h  Btree.h  BytesSet.h  Node.h  Token.h
lib/src/: AMANode.cpp  Btree.cpp  BytesSet.cpp  Node.cpp  Token.cpp
lib/test/: CMakeLists.txt  TestToken.cpp
old_repo/: README.md
old_repo/exercice_00_Adder/: adder.cpp  main.cpp
old_repo/exercice_01_Multiplier/: multiplier.cpp  multiplier.h
old_repo/exercice_02_Gray_code/: Makefile
old_repo/exercice_03_Boolean_evaluation/: Makefile
old_repo/exercice_03_Boolean_evaluation/srcs/: eval_formula.cpp  main.cpp
old_repo/exercice_03_Boolean_evaluation/test/: Makefile  test.cpp
old_repo/exercice_04_Truth_table/: Makefile
old_repo/exercice_04_Truth_table/includes/: print_truth_table.hpp
old_repo/exercice_04_Truth_table/srcs/: main.cpp
old_repo/exercice_05_NegationNormalForm/: Makefile
old_repo/exercice_05_NegationNormalForm/srcs/: negation_normal_form.cpp
old_repo/inc/: readysetboole.h
